# S4

./: .gitignore  API.md  README.md  opencode.json
.github/workflows/: server.yml
server/: Cargo.toml  config.md  permission_string.md  remote.md
server/s4_macros/: Cargo.toml  disclamer.md
server/s4_macros/src/: lib.rs
server/src/: config.rs  file_watcher.rs  logger.rs  main.rs  schema
server/src/api/: check_auth.rs  mod.rs  user_key.rs  userkey.rs
server/src/api/file/: get.rs  post.rs  put.rs
server/src/sql/: baseuser.sql  root.sql  schema.sql
server/src/utils/: ascii.txt  auth.rs  complex.rs  dbstructs.rs  get_file.rs  key.rs  mod.rs  permissions.rs  pstr.rs
site/: README.md  package-lock.json  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/components/: s4c.tsx
