[package]
name = "S4"
version = "0.1.0"
edition = "2024"

[dependencies]
s4_macros = { path = "s4_macros" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.10"
tokio = { version = "1.48.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["tls", "json"] }
duckdb = { version = "1.4.3", features = ["bundled", "modern-full"] }
r2d2 = "0.8.10"
bcrypt = "0.17.1"
rand = "0.9.2"
base64 = "0.22.1"
chrono = "0.4.42"
mime-type = "0.2.0"
